
7.47  2017-10-03

7.46  2017-09-12
  - Fixed support for versions of IO::Socket::SSL older than 1.965 again.

7.45  2017-09-06
  - Fixed support for versions of IO::Socket::SSL older than 1.965. (mudler,
    foursixnine, genio, sri)

7.44  2017-09-02
  - Reverted a previous change to Mojo::Loader that allowed for load_class to be
    called on the same class multiple times, since it had very bad side effects.
  - Improved Mojo::IOLoop::TLS to use a little less memory.
  - Fixed a bug where Mojolicious controllers like "MyApp::Controller::Foo::Bar"
    would disappear if loading the controller "MyApp::Controller::Foo" was
    attempted but failed.

7.43  2017-08-18
  - Improved Mojo::Base role support with the ability to rebless objects.

7.42  2017-08-17
  - Improved Mojo::Base role support with shorthands.
      MyClass->with_roles('MyClass::Role::Foo')
    becomes
      MyClass->with_roles('+Foo')

7.41  2017-08-15
  - Added with_roles method to Mojo::ByteStream, Mojo::Collection, Mojo::DOM and
    Mojo::File.

7.40  2017-08-14
  - Added support for Role::Tiny extensions to all classes based on Mojo::Base.
    (dotan)
  - Added with_roles method to Mojo::Base. (dotan)
  - Added the guide Mojolicious::Guides::Testing. (scottw)
  - Replaced systemd detection in Mojo::Log with the MOJO_LOG_SHORT environment
    variable, since there is no reliable way to detect systemd.

7.39  2017-08-03
  - Removed experimental close_idle_connections method from
    Mojo::Server::Daemon.
  - Increased default graceful_timeout from 60 to 120 seconds in
    Mojo::Server::Prefork.
  - Improve Mojo::Server::Daemon to log request errors.
  - Fixed a bug where Mojo::Server::Daemon would close connections too quickly
    and interrupt requests.

7.38  2017-07-30
  - Added extra attribute to Mojolicious::Static. (jabberwok)
  - Improve Mojo::URL performance significantly.
  - Fixed memory leak in Mojo::URL that was caused by a Perl 5.24 bug.

7.37  2017-07-21